--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,6 @@ $RECYCLE.BIN/
 # http://www.sonarlint.org/commandline/
 # SonarLint working directories, configuration files (including credentials)
 .sonarlint/
+
+# Ignore vscode folder
+/.vscode/
