--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,11 @@
       <artifactId>javafx-controls</artifactId>
       <version>18</version>
     </dependency>
+    <!-- JSON -->
     <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-fxml</artifactId>
-      <version>18</version>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
     </dependency>
   </dependencies>
 
