--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
       <artifactId>javafx-controls</artifactId>
       <version>18</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>18</version>
+    </dependency>
     <!-- JSON -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -90,6 +95,14 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.6</version>
+          <configuration>
+            <mainClass>it.polimi.ingsw.Main</mainClass>
+          </configuration>
       </plugin>
     </plugins>
   </build>
