--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
     <!-- JavaFX -->
     <dependency>
       <groupId>org.openjfx</groupId>
+      <artifactId>javafx</artifactId>
+      <version>18</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>18</version>
     </dependency>
@@ -97,12 +103,12 @@
         </executions>
       </plugin>
       <plugin>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-maven-plugin</artifactId>
-          <version>0.0.6</version>
-          <configuration>
-            <mainClass>it.polimi.ingsw.Main</mainClass>
-          </configuration>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.6</version>
+        <configuration>
+          <mainClass>it.polimi.ingsw.Main</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
