--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
                   <mainClass>it.polimi.ingsw.Main</mainClass>
                 </transformer>
               </transformers>
-              <finalName>Main</finalName>
+              <finalName>PSP3-eriantys</finalName>
             </configuration>
           </execution>
         </executions>
